--- a/main.html
+++ b/main.html
@@ -10,9 +10,11 @@
 	<table>
 		<caption>Item Cart</caption>
 		<tr>
-			<th>Item</th>
-			<th>Price</th>
-			<th>Quantity</th>
+			<thead>
+				<th>Item</th>
+				<th>Price</th>
+				<th>Quantity</th>
+			</thead>
 		</tr>
 		<tr>
 			<th>Banana</th>
